--- a/index.html
+++ b/index.html
@@ -170,31 +170,14 @@
                                                 <span class="dragndrop__pdf-label">your PDF file</span>
                                             </label>
                                             <div class="dragndrop__content">
-                                                <p>The "57x100 Design" option applies to ordering whole meters of the printout.
-                                                    1 piece = 1 linear meter = print 57x100cm.</p>
+                                                <p><b>Acceptable file extensions: JPG, JPEG, PNG, PDF, TIFF</b></p>
                                                 <br>
                                                 <p>
-                                                    The given price: per running meter, the number and size of graphics does not matter, we duplicate the entire meters designed by you.
+                                                    The aspect ratio of the file has been calculated automatically. If the printout requires transparency, use the PNG or TIFF extension.
                                                 </p>
                                                 <br>
                                                 <p>
-                                                    Purpose: an option dedicated to people who print many different graphics in one project.
-                                                </p>
-                                                <br>
-                                                <p>
-                                                    Example: When ordering 4 pieces, we will receive a print in size 57x400cm
-                                                </p>
-                                                <br>
-                                                <p>
-                                                    In the "Custom" option, you add one graphic and decide in what size and how many times we should print it.
-                                                </p>
-                                                <br>
-                                                <p>
-                                                    Listed price: for a single graphic.
-                                                </p>
-                                                <br>
-                                                <p>
-                                                    Purpose: an option dedicated to people who need many prints of one pattern.
+                                                    You have attached a PDF file and we are unable to read the size of the image. Enter the required width and height of the graphic in print. Remember to keep the proportions so as not to deform the printout.
                                                 </p>
                                             </div>
                                         </div>
@@ -323,6 +306,7 @@
                                                     <div class="enter-size-gallery__demensions-height">0cm</div>
                                                 </div>
                                             </div>
+                                            <p>Click the calculate button to calculate the sizes and update them in the cart</p>
                                             <button class="enter-size-gallery__button button">Calculate</button>
                                         </div>
                                         <div class="enter-size-pieces">
@@ -343,6 +327,7 @@
                                                     <button class="counter__button btn-plus">+</button>
                                                 </div>
                                             </div>
+                                            <p>Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
                                             <button class="enter-size-pieces__button button">Calculate</button>
                                         </div>
                                     </div>
