beta update commit

--- a/index.html
+++ b/index.html
@@ -360,6 +360,10 @@
                                                 <div class="counter-price"><span class="counter-price__count" data-price-count="0" data-digits-counter="400">0</span><span class="currency">Zł</span></div>    
                                             </div>
                                         </div>
+
+                                        <p class="creator-main__message-quantity">
+                                            Table 1=50PLN/m, 2-10=45PLN/m, 11-50=43PLN/m, 50+=41PLN/m
+                                        </p>
                                     </div>
                                 </div>
                             </div>
