--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                                                     <label for="upload-by-link" class="checkbox-custom" id="custom-checkbox-l"></label>
                                                     <label for="upload-by-link" class="dragndrop__other-way-text">Use a file link</label>    
                                                 </div>
-                                                <p>please send a link to exactly the file you want to see on the printout(only .TIFF)</p>
+                                                <p>please send a link to exactly the file you want to see on the printout</p>
                                                 <input type="text" class="dragndrop__other-way-paste">
                                             </div>
                                         </div>
@@ -188,6 +188,15 @@
                                                 <p>
                                                     You have attached a PDF file and we are unable to read the size of the image. Enter the required width and height of the graphic in print. Remember to keep the proportions so as not to deform the printout.
                                                 </p>
+                                            </div>
+                                            <div class="dragndrop__other-way">
+                                                <div class="dragndrop__other-way-row">
+                                                    <input type="checkbox" name="by-link" id="upload-by-link-p" class="checkbox-input">
+                                                    <label for="upload-by-link-p" class="checkbox-custom" id="custom-checkbox-p-l"></label>
+                                                    <label for="upload-by-link-p" class="dragndrop__other-way-text">Use a file link</label>    
+                                                </div>
+                                                <p>please send a link to exactly the file you want to see on the printout</p>
+                                                <input type="text" class="dragndrop__other-way-paste">
                                             </div>
                                         </div>
                                     </div>
@@ -302,7 +311,7 @@
                                             <p>Enter long side size (in cm)</p>
                                             <div class="counter">
                                                 <button class="counter__button btn-minus">-</button>
-                                                <div class="counter__num">40</div>
+                                                <input type="number" class="counter__num" value="40">
                                                 <button class="counter__button btn-plus">+</button>
                                             </div>
                                             <div class="enter-size-gallery__demensions">
@@ -324,7 +333,7 @@
                                                 <div class="enter-size-pieces__title">Widht:</div>
                                                 <div class="enter-size-pieces__width counter">
                                                     <button class="counter__button btn-minus">-</button>
-                                                    <div class="counter__num">40</div>
+                                                    <input type="number" class="counter__num" value="40">
                                                     <button class="counter__button btn-plus">+</button>
                                                 </div>
                                             </div>
@@ -332,7 +341,7 @@
                                                 <div class="enter-size-pieces__title">Height:</div>
                                                 <div class="enter-size-pieces__height counter">
                                                     <button class="counter__button btn-minus">-</button>
-                                                    <div class="counter__num">40</div>
+                                                    <input type="number" class="counter__num" value="40">
                                                     <button class="counter__button btn-plus">+</button>
                                                 </div>
                                             </div>
@@ -373,7 +382,7 @@
                                     </div>
                                     <div class="total-bill">
                                         <span class="total-bill__title">Total:</span>
-                                        <span class="total-bill__value" id="price"><span class="total-bill__value-num" data-digits-counter="400">0</span><span class="currency">Zł</span></span>
+                                        <span class="total-bill__value" id="price"><span class="total-bill__value-num" data-digits-counter="400">0</span><span class="currency">zł</span></span>
                                     </div>
 
                                     <button class="aside-button button" disabled>add to cart</button>
