blocking user by too large size entering added

--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
                                                     <button class="counter__button btn-plus">+</button>
                                                 </div>
                                             </div>
-                                            <p>Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
+                                            <p class="enter-size-paragraph">Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
+                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> the size of the longer side should not exceed 99cm, and the size of the shorter side should not exceed 56cm <br> <b>Please change the dimensions</b></p>
                                             <button class="enter-size-pieces__button button">Calculate</button>
                                         </div>
                                     </div>
