--- a/index.html
+++ b/index.html
@@ -324,7 +324,8 @@
                                                     <div class="enter-size-gallery__demensions-height">0cm</div>
                                                 </div>
                                             </div>
-                                            <p>Click the calculate button to calculate the sizes and update them in the cart</p>
+                                            <p class="enter-size-paragraph">Click the calculate button to calculate the sizes and update them in the cart</p>
+                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> the size of the longer side should not exceed 99cm, and the size of the shorter side should not exceed 56cm <br> <b>Please change the dimensions</b></p>
                                             <button class="enter-size-gallery__button button">Calculate</button>
                                         </div>
                                         <div class="enter-size-pieces">
