live calculating added

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                             <p>Enter long side size (in cm)</p>
                                             <div class="counter">
                                                 <button class="counter__button btn-minus">-</button>
-                                                <input type="number" class="counter__num" value="40">
+                                                <input type="number" class="counter__num" value="0">
                                                 <button class="counter__button btn-plus">+</button>
                                             </div>
                                             <div class="enter-size-gallery__demensions">
@@ -325,8 +325,8 @@
                                                 </div>
                                             </div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate the sizes and update them in the cart</p>
-                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> the size of the longer side should not exceed 99cm, and the size of the shorter side should not exceed 56cm <br> <b>Please change the dimensions</b></p>
-                                            <button class="enter-size-gallery__button button">Calculate</button>
+                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
+                                            <button class="enter-size-gallery__button button" disabled>Calculate</button>
                                         </div>
                                         <div class="enter-size-pieces">
                                             <p>Enter dimensions of your graphic</p>
@@ -347,7 +347,7 @@
                                                 </div>
                                             </div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
-                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> the size of the longer side should not exceed 99cm, and the size of the shorter side should not exceed 56cm <br> <b>Please change the dimensions</b></p>
+                                            <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
                                             <button class="enter-size-pieces__button button">Calculate</button>
                                         </div>
                                     </div>
