live calculating price added

--- a/index.html
+++ b/index.html
@@ -323,6 +323,8 @@
                                                     <div class="enter-size-gallery__demensions-title">Height:</div>
                                                     <div class="enter-size-gallery__demensions-height">0cm</div>
                                                 </div>
+
+                                                <div class="enter-size-gallery__preview-price">Price: <span class="preview-price">0</span> <span class="currency">zł</span></div>
                                             </div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate the sizes and update them in the cart</p>
                                             <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
@@ -346,6 +348,7 @@
                                                     <button class="counter__button btn-plus">+</button>
                                                 </div>
                                             </div>
+                                            <div class="enter-size-pieces__preview-price">Price: <span class="preview-price">0</span> <span class="currency">zł</span></div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
                                             <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
                                             <button class="enter-size-pieces__button button">Calculate</button>
