adding sizes by print

--- a/index.html
+++ b/index.html
@@ -242,63 +242,63 @@
                                         </div>
 
                                         <div class="size-list">
-                                            <div class="radio-box radio-size-p" data-long-side-size="40">
+                                            <div class="radio-box radio-size-p" data-long-side-size="40" data-size-name="Male XL">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/basic-size.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Male XL</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-rec-size="type1" data-long-side-size="10">
+                                            <div class="radio-box radio-size-p" data-rec-size="type1" data-long-side-size="10" data-size-name="Male S">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size1.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Male S</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-rec-size="type2" data-long-side-size="28">
+                                            <div class="radio-box radio-size-p" data-rec-size="type2" data-long-side-size="28" data-size-name="Male L">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size2.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Male L</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-gender="female" data-long-side-size="35">
+                                            <div class="radio-box radio-size-p" data-gender="female" data-long-side-size="35" data-size-name="Female XL">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/basic-female.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Female XL</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-gender="female" data-rec-size="type1" data-long-side-size="8">
+                                            <div class="radio-box radio-size-p" data-gender="female" data-rec-size="type1" data-long-side-size="8" data-size-name="Female S">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size1-female.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Female S</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-gender="female" data-rec-size="type2" data-long-side-size="26">
+                                            <div class="radio-box radio-size-p" data-gender="female" data-rec-size="type2" data-long-side-size="26" data-size-name="Female L">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size2-female.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Female L</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-long-side-size="30">
+                                            <div class="radio-box radio-size-p" data-long-side-size="30" data-size-name="Kids XL">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/basic-kids.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Kids XL</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-rec-size="type1" data-long-side-size="6">
+                                            <div class="radio-box radio-size-p" data-rec-size="type1" data-long-side-size="6" data-size-name="Kids S">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size1-kids.png" alt="">
                                                 </div>
                                                 <h3 class="radio-box__label">Kids S</h3>
                                             </div>
-                                            <div class="radio-box radio-size-p" data-rec-size="type2" data-long-side-size="20">
+                                            <div class="radio-box radio-size-p" data-rec-size="type2" data-long-side-size="20" data-size-name="Kids L">
                                                 <div class="radio-box__marker"></div>
                                                 <div class="radio-box__preview">
                                                     <img src="./img/sizes/size2-kids.png" alt="">
