--- a/index.html
+++ b/index.html
@@ -328,6 +328,28 @@
                                             </div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate the sizes and update them in the cart</p>
                                             <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
+
+                                            <table class="demo-table enter-size-gallery__table" style="display: none;">
+                                                <tr>
+                                                    <td class="demo-table__title">Quantity</td>
+                                                    <td>1</td>
+                                                    <td>10</td>
+                                                    <td>100</td>
+                                                    <td>1000</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="demo-table__title">~Price per 1 piece (zł)</td>
+                                                    <td class="demo-table__calc-v" data-quantity="1">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="10">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="100">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="1000">0</td>
+                                                </tr>
+                                            </table>
+
+                                            <p class="enter-size-contact" style="display: none;">
+                                                <span>if you want to order a larger size, contact us</span> <br> <a href="mailto:shop@dtfonline.pl">shop@dtfonline.pl</a>
+                                            </p>
+
                                             <button class="enter-size-gallery__button button" disabled>Calculate</button>
                                         </div>
                                         <div class="enter-size-pieces">
@@ -351,6 +373,27 @@
                                             <div class="enter-size-pieces__preview-price">Price: <span class="preview-price">0</span> <span class="currency">zł</span></div>
                                             <p class="enter-size-paragraph">Click the calculate button to calculate how many graphics will fit per meter and update quantity</p>
                                             <p class="enter-size-warn" style="display: none;"><b>WARNING</b> <br> Entered dimension exceeds the maximum print size. <br> <b>Please change the dimensions</b></p>
+                                            
+                                            <table class="demo-table enter-size-pieces__table" style="display: none;">
+                                                <tr>
+                                                    <td class="demo-table__title">Quantity</td>
+                                                    <td>1</td>
+                                                    <td>10</td>
+                                                    <td>100</td>
+                                                    <td>1000</td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="demo-table__title">~Price per 1 piece (zł)</td>
+                                                    <td class="demo-table__calc-v" data-quantity="1">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="10">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="100">0</td>
+                                                    <td class="demo-table__calc-v" data-quantity="1000">0</td>
+                                                </tr>
+                                            </table>
+
+                                            <p class="enter-size-contact" style="display: none;">
+                                                <span>if you want to order a larger size, contact us</span> <br> <a href="mailto:shop@dtfonline.pl">shop@dtfonline.pl</a>
+                                            </p>
                                             <button class="enter-size-pieces__button button">Calculate</button>
                                         </div>
                                     </div>
